--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 <div id="frame-container">
   <iframe
     id="main-frame"
-    src="https://chat.cdnbakery.com/"
+    src="https://chat.cdnbakery.com/w/1/c/2429?search=&open=true"
     allow="microphone; camera; clipboard-read; clipboard-write"
     sandbox="allow-same-origin allow-scripts allow-forms allow-popups allow-modals allow-downloads"
     title="CDN Bakery Chat">
@@ -154,11 +154,11 @@
   <div class="icon">🔒</div>
   <h2>Сайт заблокировал встраивание</h2>
   <p>chat.cdnbakery.com запрещает открытие во фрейме. Нажмите кнопку ниже — сайт откроется в Safari с сохранением иконки на экране Домой.</p>
-  <a href="https://chat.cdnbakery.com/" id="open-link">Открыть сайт</a>
+  <a href="https://chat.cdnbakery.com/w/1/c/2429?search=&open=true" id="open-link">Открыть сайт</a>
 </div>
 
 <script>
-  const TARGET = 'https://chat.cdnbakery.com/';
+  const TARGET = 'https://chat.cdnbakery.com/w/1/c/2429?search=&open=true';
   const frame  = document.getElementById('main-frame');
   const splash = document.getElementById('splash');
   const errorScreen = document.getElementById('error-screen');
